# mk

./: .gitignore  .replit  README.md  app.py  main.py  models.py  pyproject.toml  replit.md  storage.py
static/css/: styles.css
static/js/: advanced-features.js  app.js  codemirror-setup.js  content-embedding.js  editor.js  file-manager.js  preview.js  sessions.js  shortcuts.js  spellcheck.js  toolbar-manager.js
templates/: index.html
