[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ebooklib>=0.20",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "lxml>=6.0.2",
    "markdown>=3.10",
    "mistune>=3.1.4",
    "odfpy>=1.4.1",
    "python-docx>=1.2.0",
    "weasyprint>=66.0",
    "werkzeug>=3.1.3",
]
